# ChronoRobotSimulator

./: .gitignore  CMakeLists.txt  README.md  json_example.json
include/: ChFunction_Data.h  ChFunction_PID.h  ChFunction_SquareWave.h  ChronoIO.h  Controller.h  GuiControl.h  Mesher.h  RFT.h  Robot.h  VectorUtility.h  chfunction_controller.h  chfunction_data.h  chfunction_pid.h  chfunction_squarewave.h  chrono_io.h  contact_reporter.h  controller.h  gui.h  mesh.h  mesher.h  motor_function.h  rft.h  robot.h  servo_motor.h  vector_utility.h  world.h
scripts/: n_link_lagrangian.m  two_link_lagrangian.m
src/: ChronoIO.cpp  Controller.cpp  GuiControl.cpp  Mesher.cpp  RFT.cpp  Robot.cpp  chfunction_controller.cpp  chrono_io.cpp  controller.cpp  gui.cpp  main.cpp  main_biped.cpp.bk  mesh.cpp  mesher.cpp  rft.cpp  robot.cpp  servo_motor.cpp  world.cpp
